Issue 160: improve left spacing for menu items for Firefox

--- a/resources/web/dataFinder.css
+++ b/resources/web/dataFinder.css
@@ -398,6 +398,7 @@ ul.nav
     border-color:#b4b4b4;
     border-width: 1px;
     border-style: solid;
+    padding: 0;
     box-shadow: rgb(136, 136, 136) 0px 0px 6px;
     z-index: 100;
     -webkit-padding-start: 0px
